WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292631
WebKit should report didFailProvisionalNavigationWithError when it detects an unexpected file URL navigation.
https://bugs.webkit.org/show_bug.cgi?id=292631
Summary
WebKit should report didFailProvisionalNavigationWithError when it detects an...
Basuke Suzuki
Reported
2025-05-06 15:03:54 PDT
For an enhancement in WebKit, to help Safari’s UI not get in this stuck state when Safari requests to load an unexpected file URL.
Attachments
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2025-05-06 15:55:01 PDT
rdar://137717412
Basuke Suzuki
Comment 2
2025-05-07 13:34:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45076
EWS
Comment 3
2025-05-19 14:06:26 PDT
Committed
295123@main
(fc96150a7711): <
https://commits.webkit.org/295123@main
> Reviewed commits have been landed. Closing PR #45076 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug