WebKit should report didFailProvisionalNavigationWithError when it detects an unexpected file URL navigation. https://bugs.webkit.org/show_bug.cgi?id=292631 rdar://137717412

Reviewed by Brady Eidson and Chris Dumez.

For an enhancement in WebKit, to help Safari’s UI not get in this stuck state when Safari requests to load
an unexpected file URL.

* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.h:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::decidePolicyForNavigationAction):

Canonical link: https://commits.webkit.org/295123@main